# Py-Rotkeeper

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  setup-venv.sh
.github/workflows/: codeql-analysis.yml  codeql.yml
bones/config/: render-flags.yaml  user-config.yaml
bones/reports/: README.md  assets.yaml  build-manifest.yaml  nav.yaml  nav_partial.html  nav_partial.md  render-manifest.yaml  render-state.yaml  rotkeeper-docbook-clean.md  rotkeeper-docbook.md  rotkeeper-scriptbook-full.md  rotkeeper-scriptbook-full_mostly good badish book.md  sitemap.yaml  sitemap_pipeline.yaml
bones/templates/: default.html  rot-doc.html
docs/: changelog.html  docs.html  index.html  index.md  patch-lore.html  patch.html  quickstart.html  quickstart.md
docs/commands/: assets.html  book.html  cleanup_bones.html  cleanup_bones.md  collect_assets.html  index.html  init.html  nav.html  render.html  render_sitemap.html  reseed.html  sitemap.html  sitemap_pipeline.html  sitemap_pipeline.md
docs/concepts/: pandoc-frontmatter.html
docs/pipeline/: assets.html  collect-assets.html  index.html  pipeline-assets.html  pipeline-collect-assets.html  pipeline-render.html  render.html
docs/rotkeeper-lore/: chapter-01.html  chapter-02.html  chapter-03.html  chapter-04.html
docs/scaffold/: index.html  init.html  reseed.html  scaffold-init.html  scaffold-reseed.html
docs/sitemap/: index.html  pipeline.html  render-sitemap.html  sitemap.html
md/: changelog.md  docs.md  index.md  patch-lore.md  patch.md  quickstart.md
md/utils/: book.md  (+3 more)
tests/: test_config.py
(+189 files in other folders)
